# t4-cicd

./: .gitignore  CHANGELOG.md  FeatureStatus.md  MongoInstructions.md  README.md  featureStatus.md  packages.html  pyproject.toml  sample_validation_res.json  test_ans.json
.cicd-pipelines/: cycle_config_2.yml  invalid_config.yml  java-template.yml  javascript-template.yml  no_pipeline_key.yml  pipelines.yml  pipelines2.yml  test_interrupt.yml  valid_config.yml
.github/workflow/: project-ci.yml
.github/workflows/: project-ci.yml
apidocs/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  src.cli.__main__.html  src.cli.cmd_config.html  src.cli.cmd_pipeline.html  src.cli.html  src.controller.controller.Controller.html  src.controller.controller.html  src.controller.html  src.util.common_utils.ConfigOverrides.html  src.util.common_utils.DryRun.html  src.util.common_utils.TopoSort.html  src.util.common_utils.UnionFind.html  src.util.common_utils.html  src.util.config_tools.ConfigChecker.html  src.util.config_tools.html  src.util.constant.html  src.util.container.ContainerManager.html  src.util.container.DockerManager.html  src.util.container.html  src.util.db_mongo.MongoAdapter.html  src.util.db_mongo.html  src.util.html  src.util.model.ArtifactConfig.html  src.util.model.DockerConfig.html  src.util.model.GlobalConfig.html  src.util.model.JobConfig.html  src.util.model.JobLog.html  src.util.model.PipelineConfig.html  src.util.model.PipelineInfo.html  src.util.model.SessionDetail.html  src.util.model.ValidatedStage.html  src.util.model.html  src.util.repo_manager.RepoManager.html  (+3 more)
dev-docs/design-docs/: CLI.md  CLI_Documentation.md  ComponentDesign.md  ConfigFileDoc.md  DataStore.md  SystemDesign.md  TestingReadMe.md  design_doc_config.md  designdoc_data_schemes.md
dev-docs/reports/weekly/: weekly-report-2024-10-01.md  weekly-report-2024-10-08.md  weekly-report-2024-10-12.md  weekly-report-2024-10-19.md  (+6 more)
src/: __init__.py
src/cli/: __init__.py  __main__.py  cmd_config.py  cmd_pipeline.py
src/controller/:  controller.py  __init__.py  controller.py  repo_manager.py
src/util/: __init__.py  common_utils.py  config_tools.py  constant.py  container.py  db_artifact.py  db_mongo.py  model.py  repo_manager.py  yaml_parser.py
tests/: TestingReadme.md
tests/test_cli/: sample_validation_res.json  test_cmd_config.py  test_cmd_pipeline.py
tests/test_controller/: jobs_history_sample_data.json  pipeline_data.json  repo_configs_sample_data.json  test_controller.py  test_repo_manager.py
tests/test_util/: conftest.py  test_common_utils.py  test_config_tools.py  test_container.py  test_controller_container.py  test_db_artifact.py  test_db_mongo.py  test_model.py  test_repo_manager.py  test_yaml.py  test_yaml_parser.py
(+11 files in other folders)
